[MeeGo] Another major panel UI overhaul
The panel has been updated (again) to reflect the latest MeeGo
look and feel, and better organize some of the features.

MediaPanelContents and MeeGoSourceContents were merged and cleaned
up a bit as well, so it's easier on my coding eyes.

--- a/src/Extensions/Banshee.MeeGo/Banshee.MeeGo.csproj
+++ b/src/Extensions/Banshee.MeeGo/Banshee.MeeGo.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Banshee.MeeGo\PlaybackBox.cs" />
     <Compile Include="Banshee.MeeGo\MeeGoTrackInfoDisplay.cs" />
     <Compile Include="Banshee.MeeGo\MeeGoPanel.cs" />
-    <Compile Include="Banshee.MeeGo\MeeGoSourceContents.cs" />
+    <Compile Include="Banshee.MeeGo\MeeGoTheme.cs" />
+    <Compile Include="Banshee.MeeGo\MeeGoHeaderBox.cs" />
   </ItemGroup>
 </Project>
