--- a/src/Extensions/Banshee.MeeGo/Makefile.am
+++ b/src/Extensions/Banshee.MeeGo/Makefile.am
@@ -7,9 +7,10 @@ INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)
 
 SOURCES =  \
 	Banshee.MeeGo/MediaPanelContents.cs \
+	Banshee.MeeGo/MeeGoHeaderBox.cs \
 	Banshee.MeeGo/MeeGoPanel.cs \
 	Banshee.MeeGo/MeeGoService.cs \
-	Banshee.MeeGo/MeeGoSourceContents.cs \
+	Banshee.MeeGo/MeeGoTheme.cs \
 	Banshee.MeeGo/MeeGoTrackInfoDisplay.cs \
 	Banshee.MeeGo/PlaybackBox.cs \
 	Banshee.MeeGo/SearchEntry.cs \
