[MeeGo] Added a MeeGo client entry assembly
This client wraps the Nereid client, but loads the Banshee.MeeGo
extension assembly manually (before Mono.Addins) since calling
AddinManager.Initialize takes way too long, and so the MeeGo toolbar
gives up waiting since the MeeGo panel DBus name has not yet been
acquired.

This client creates the MeeGo panel immediately after gtk_init, so the
MeeGo toolbar is satisfied that someone has acquired the DBus name for
the media panel, and patiently waits for our slow startup.

--- a/configure.ac
+++ b/configure.ac
@@ -260,6 +260,7 @@ src/Clients/Booter/banshee-1.darwin
 src/Clients/Halie/Makefile
 src/Clients/Muinshee/Makefile
 src/Clients/Nereid/Makefile
+src/Clients/MeeGo/Makefile
 
 src/Core/Makefile
 src/Core/Banshee.CollectionIndexer/Makefile
