[Booter] If running on MeeGo, use MeeGo.exe
Otherwise use the dynamic startup client, Banshee.exe.

--- a/src/Clients/Booter/banshee-1.linux.in
+++ b/src/Clients/Booter/banshee-1.linux.in
@@ -2,7 +2,11 @@
 
 prefix=@prefix@
 libdir=@expanded_libdir@
-exec_asm="Banshee.exe"
+if test -f /etc/meego-release; then
+	exec_asm="MeeGo.exe"
+else
+	exec_asm="Banshee.exe"
+fi
 MONO_EXE="@expanded_libdir@/@PACKAGE@/$exec_asm"
 BANSHEE_EXEC_NAME=$(basename $0)
 BANSHEE_CONFIG_DIR="${XDG_CONFIG_HOME:-$HOME/.config}/banshee-1"
