[MeeGo] use 'Banshee Media Player' for panel name

--- a/src/Extensions/Banshee.MeeGo/meego-panel-banshee.desktop.in.in
+++ b/src/Extensions/Banshee.MeeGo/meego-panel-banshee.desktop.in.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Exec=@libexecdir@/meego-panel-banshee
-_Name=media
+_Name=Banshee Media Player
 _Comment=Quick access panel for your media
 OnlyShowIn=MOBLIN
 X-Moblin-Priority=Low
