[ThemeTestModule] basic/lame GUI test for Theme
The rendering is wrong, but I used this to make sure the new
ToplevelBorderCollapse stuff worked. Could use a lot of future love to
test theme rendering.

--- a/src/Libraries/Hyena.Gui/Hyena.Gui.csproj
+++ b/src/Libraries/Hyena.Gui/Hyena.Gui.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Hyena.Gui.Canvas\Size.cs" />
     <Compile Include="Hyena.Gui.Canvas\Thickness.cs" />
     <Compile Include="Hyena.Gui.Canvas\Point.cs" />
+    <Compile Include="Hyena.Gui.Theming\ThemeTestModule.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
