X11NotificationArea: Enhance check for RGBA visual (bgo#638477)
Compare the sum of the precisions of all colors with the depth of the
visual.

This uses functions that are only available in gdk-x11 >= 2.22,
so we only do it in this case. Users with an older version of gdk-x11
will still have the bug, but it improves the situation quite a bit.

Signed-off-by: Bertrand Lorentz <bertrand.lorentz@gmail.com>

--- a/src/Extensions/Banshee.NotificationArea/Makefile.am
+++ b/src/Extensions/Banshee.NotificationArea/Makefile.am
@@ -5,6 +5,10 @@ GMCS_FLAGS+="-define:INTERNAL_NOTIFY_SHARP"
 NOTIFY_SHARP_LIBS = 
 endif
 
+if HAVE_GDK_2_22
+GMCS_FLAGS+= "-define:HAVE_GDK_2_22"
+endif
+
 ASSEMBLY = Banshee.NotificationArea
 TARGET = library
 LINK = $(REF_EXTENSION_NOTIFICATIONAREA) $(NOTIFY_SHARP_LIBS)
