--- a/data/desktop-files/common.desktop.in
+++ b/data/desktop-files/common.desktop.in
@@ -7,7 +7,7 @@ Icon=media-player-banshee
 StartupNotify=true
 Terminal=false
 Type=Application
-Categories=GNOME;Audio;Music;Player;AudioVideo;X-Ximian-Main;X-Novell-Main;X-Red-Hat-Base;
+Categories=GTK;GNOME;Audio;Music;Player;AudioVideo;X-Ximian-Main;X-Novell-Main;X-Red-Hat-Base;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=banshee
 X-GNOME-Bugzilla-Component=General
