Mtp: Fix file type in sync with libmtp > 1.1.0 (bgo#688540)
libmtp 1.1.0 added a new file type at the beginning of the FileType
enum. Update the enum to match and made it conditional based on the
detected libmtp features.

Signed-off-by: Bertrand Lorentz <bertrand.lorentz@gmail.com>

--- a/src/Libraries/Mtp/Makefile.am
+++ b/src/Libraries/Mtp/Makefile.am
@@ -8,6 +8,10 @@ if LIBMTP_TRACK_STRUCT_HAS_MODDATE
 BUILD_DEFINES += "-define:LIBMTP_TRACK_HAS_MODDATE"
 endif
 
+if LIBMTP_FILETYPE_ENUM_HAS_FOLDER
+BUILD_DEFINES += "-define:LIBMTP_FILETYPE_ENUM_HAS_FOLDER"
+endif
+
 if LIBMTP_SIZEOF_TIME_T_64
 BUILD_DEFINES += "-define:LIBMTP_SIZEOF_TIME_T_64"
 endif
