configure: stop using obsolete AutoMake macro (bgo#691694)
AM_CONFIG_HEADER macro seems to have been obsoleted in favour of
the new AC_CONFIG_HEADERS one, and since version 1.13.1 of GNU
automake this seems to be erroring out instead of just warning.

Signed-off-by: Andres G. Aragoneses <knocte@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -29,7 +29,7 @@ AC_INIT([banshee], banshee_version, [http://bugzilla.gnome.org/enter_bug.cgi?pro
 
 AM_INIT_AUTOMAKE([1.10 no-dist-gzip dist-bzip2 tar-ustar foreign])
 AM_MAINTAINER_MODE([enable])
-AM_CONFIG_HEADER([config.h])
+AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([build/m4])
 AC_SUBST([ACLOCAL_AMFLAGS], ["-I build/m4/shamrock -I build/m4/banshee -I build/m4/shave \${ACLOCAL_FLAGS}"])
 
