--- a/src/Core/Banshee.ThickClient/Makefile.am
+++ b/src/Core/Banshee.ThickClient/Makefile.am
@@ -3,6 +3,10 @@ TARGET = library
 ASSEMBLY_BUILD_FLAGS = -unsafe
 LINK = $(REF_BANSHEE_THICKCLIENT)
 
+if HAVE_DBUS_GLIB
+BUILD_DEFINES = "-define:HAVE_DBUS_GLIB"
+endif
+
 SOURCES =  \
 	Banshee.Addins.Gui/AddinView.cs \
 	Banshee.CairoGlyphs/BansheeLineLogo.cs \
@@ -174,3 +178,5 @@ RESOURCES =  \
 
 include $(top_srcdir)/build/build.mk
 
+EXTRA_DIST += Banshee.ThickClient.dll.config
+module_SCRIPTS += Banshee.ThickClient.dll.config
