--- a/src/Core/Banshee.ThickClient/Banshee.ThickClient.csproj
+++ b/src/Core/Banshee.ThickClient/Banshee.ThickClient.csproj
@@ -152,6 +152,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Banshee.Collection.Gui\Tests\ArtworkManagerTests.cs" />
     <Compile Include="Banshee.Collection.Gui\TrackListView.cs" />
     <Compile Include="Banshee.Collection.Gui\ColumnCellAlbum.cs" />
     <Compile Include="Banshee.Collection.Gui\ArtworkManager.cs" />
@@ -329,5 +330,6 @@
   </ProjectExtensions>
   <ItemGroup>
     <Folder Include="Banshee.Gui.Widgets\Tests\" />
+    <Folder Include="Banshee.Collection.Gui\Tests\" />
   </ItemGroup>
 </Project>
