data: add a basic AppData file
Adding a very basic AppData [1] file, with only 2 screenshots for now.
Complying with this FreeDesktop.org standard is required if we want to
get included in some future app stores such as Fedora's.

Unfortunately I haven't been able to validate the XML data yet, because
of this compilation problem [2].

[1] http://people.freedesktop.org/~hughsient/appdata/
[2] https://github.com/hughsie/appdata-tools/issues/10

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -16,6 +16,11 @@ addin-xml-strings.cs: $(ADDIN_XML_FILES) $(top_srcdir)/build/addin-xml-string-ex
 	@echo "  GEN   $@"
 	$(MONO) $(top_srcdir)/build/addin-xml-string-extractor.exe $(ADDIN_XML_FILES) > $@
 
+@INTLTOOL_XML_RULE@
+appdatadir = $(datadir)/appdata
+dist_appdata_DATA = $(appdata_in_files:.xml.in=.xml)
+appdata_in_files = banshee.appdata.xml.in
+
 all: addin-xml-strings.cs
 
 EXTRA_DIST = \
