--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -13,6 +13,7 @@ data/audio-profiles/wavpack.xml.in
 data/audio-profiles/wav.xml.in
 data/audio-profiles/wma.xml.in
 data/desktop-files/common.desktop.in
+data/banshee.appdata.xml.in
 libbanshee/banshee-bpmdetector.c
 libbanshee/banshee-ripper.c
 libbanshee/banshee-transcoder.c
